# silo

./: .gitignore  Cargo.toml  README.md  build.rs  filesystem.rs
common/: silo.py
common/protobufs/: silo.proto
examples/: hello.py  run.py
examples/silo/: cli.py  silo.py  silo_pb2.py  silo_pb2.pyi  silo_pb2_grpc.py
fevm-hardhat-kit/: package.json
fevm-hardhat-kit/contracts/silo/: Silo.sol
fevm-hardhat-kit/deploy/: 00_deploy.js
silo/: package.json  pnpm-lock.yaml  silo.py  silo_pb2.py  silo_pb2_grpc.py  tailwind.config.ts
silo/src/: wagmi.ts
silo/src/app/: index.css  layout.tsx  page.tsx  providers.tsx  setData.tsx
silo/src/app/api/upload/: route.ts
silo/src/app/modules/: become-compute-provider.tsx  compute-your-function.tsx  footer.tsx
silo/src/components/: copy-button.tsx  spinner.tsx
silo/src/components/ui/: button.tsx  tabs.tsx
src/: container.rs  db.rs  filesystem.rs  grpc.rs  http.rs  indexer.rs  main.rs  mount.rs  namespace.rs  net.rs
src/filesystem/: errors.rs  mod.rs  mount.rs  silofs.rs
src/indexer/: args.rs  commands.rs  database.rs  indexer.rs  main.rs  server.rs
templates/: base.html  dashboard.html  login.html
