[package]
name = "silo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
nix = { version = "0.28.0", features = ["sched", "mount", "fs", "hostname", "user", "socket"] }
prost = "0.12.6"
tokio = {version = "1.37.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11"
