[package]
name = "silo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Self deployable, serverless computing platform"
homepage = "https://github.com/shubhamai"
repository = "https://github.com/shubhamai/silo"
readme = "README.md"

[dependencies]
bincode = "2.0.0-rc.3"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
dashmap = "5.5.3"
futures = "0.3.30"
http-body-util = "0.1.1"
hyper = {version="1.3.1", features=["full"]}
hyper-util = {version="0.1.3", features=["tokio"]}
ipc-channel = "0.18.0"
log = "0.4.21"
nix = { version = "0.28.0", features = ["sched", "mount", "fs", "hostname", "user", "socket"] }
prost = "0.12.6"
rand = "0.8.5"
redis = "0.25.3"
reqwest = {version="0.12.4", default-features = false, features = ["rustls-tls"]}
rtnetlink = "0.14.1"
serde = { version = "1.0.202", features=["derive"] }
serde_json = "1.0.117"
tokio = {version = "1.37.0", features = ["macros", "rt-multi-thread"]}
tonic = {version="0.11.0", features=["tls"]}

[build-dependencies]
tonic-build = "0.11"
