[package]
name = "silo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Self deployable, serverless computing platform"
homepage = "https://github.com/shubhamai"
repository = "https://github.com/shubhamai/silo"
readme = "README.md"

[[bin]]
name = "indexer"
path = "src/indexer/main.rs"

[[bin]]
name = "silo"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
anyhow = "1.0.86"
axum = "0.7.5"
bincode = "2.0.0-rc.3"
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
dashmap = "5.5.3"
env_logger = "0.11.5"
fuser = { version = "0.14.0", features = ["serde", "serializable"] }
futures = "0.3.30"
http-body-util = "0.1.1"
hyper = {version="1.3.1", features=["full"]}
hyper-util = {version="0.1.3", features=["tokio"]}
ipc-channel = "0.18.0"
libc = "0.2.155"
log = "0.4.21"
moka = { version = "0.12.8", features = ["future", "sync"] }
nix = { version = "0.28.0", features = ["sched", "mount", "fs", "hostname", "user", "socket"] }
prost = "0.12.6"
rand = "0.8.5"
redis = "0.25.3"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rtnetlink = "0.14.1"
serde = { version = "1.0.202", features=["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tera = "1.20.0"
thiserror = "1.0.63"
tokio = { version = "1.37.0", features = ["fs", "macros", "rt-multi-thread"] }
tonic = {version="0.11.0", features=["tls"]}
walkdir = "2.5.0"

[build-dependencies]
tonic-build = "0.11"

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]
